# trickyCPPHomework2

./: CMakeLists.txt  execution-result.txt  main.cpp  source-to-count.txt
include/: timer.h
