cmake_minimum_required(VERSION 3.20)
project(homework2)

set(CMAKE_CXX_STANDARD 20)
add_executable(homework2 main.cpp)
target_include_directories(homework2 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(homework2 PRIVATE icuio)
target_link_libraries(homework2 PRIVATE icui18n)
target_link_libraries(homework2 PRIVATE icuuc)
target_link_libraries(homework2 PRIVATE icudata)
